--- a/square.css
+++ b/square.css
@@ -15,27 +15,27 @@ body {
     margin-left: 20px;
 }
 
-.color-item.yellow:hover {
+.color-item[data-color="yellow"]:hover {
     color: yellow;
     cursor: pointer;
 }
 
-.color-item.red:hover {
+.color-item[data-color="red"]:hover {
     color: red;
     cursor: pointer;
 }
 
-.color-item.blue:hover {
+.color-item[data-color="blue"]:hover {
     color: blue;
     cursor: pointer;
 }
 
-.color-item.green:hover {
+.color-item[data-color="green"]:hover {
     color: green;
     cursor: pointer;
 }
 
-.color-item.black:hover {
+.color-item[data-color="black"]:hover {
     color: black;
     cursor: pointer;
 }
